[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'geneneweaver-mset-core'
version = '0.0.1'
description = 'Our first Python project, using meson-python!'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE'}
authors = [
  {name = 'Alexander Berger', email = 'Alexander.Berger@jax.org'},
]
